...

) {
    val navigationAction: @Composable () -> Unit = {
        if (selectState != null) {
            IconButton(
                onClick = onClearSelection,
                modifier = Modifier.testTag("main:topbar_clear_selection_button"),
            ) {
                Icon(imageVector = NoteIcon.Clear, contentDescription = "clear note")
            }
        } else {
            IconButton(
                onClick = onHamburgerMenuClick,
                modifier = Modifier.testTag("main:topbar_hamburger_menu_button"),
            ) {
                Icon(imageVector = NoteIcon.Menu, contentDescription = "menu")
            }
        }
    }
    val actions: @Composable RowScope.() -> Unit =
...
                                imageVector = NoteIcon.RestoreFromTrash,
                                contentDescription = "restore note",
                            )
                        }
                        Box {
                            IconButton(
                                modifier = Modifier.testTag("main:topbar_more_options_button"),
                                onClick = { showDropDown = true },
                            ) {
                                Icon(NoteIcon.MoreVert, contentDescription = "more")
                            }
                            DropdownMenu(
                                expanded = showDropDown,
...
                }
            } else { // selectState is null (normal viewing mode)
                when (noteDisplayCategory.noteType) {
                    NoteType.NOTE -> {
                        IconButton(
                            onClick = { onDisplayModeChange() },
                            modifier = Modifier.testTag("main:topbar_display_mode_button"),
                        ) {
                            if (!isGrid) {
                                Icon(imageVector = NoteIcon.GridView, contentDescription = "grid")
                            } else {
                                Icon(
                                    imageVector = NoteIcon.ViewAgenda,
...
                            DropdownMenu(
                                expanded = showDropDown,
                                onDismissRequest = { showDropDown = false },
                                modifier = Modifier.testTag("main:topbar_label_options_dropdown"),
                            ) {
                                DropdownMenuItem(
                                    modifier = Modifier.testTag("main:topbar_rename_label_menu_item"),
                                    text = { Text(text = stringResource(Rd.string.modules_designsystem_rename_label)) },
                                    onClick = {
                                        showDropDown = false
                                        onLabelNameChange()
                                    },
                                )
...
        navigationIcon = navigationAction,
        title = {
            when {
                selectState != null -> {
                    Text(
                        text = labelText, // Show selection count
                        modifier = Modifier.testTag("main:topbar_selection_title"),
                    )
                }
                noteDisplayCategory.noteType == NoteType.NOTE -> {
                    OutlinedCard(
                        onClick = onSearchClick,
                        colors = CardDefaults.outlinedCardColors(containerColor = MaterialTheme.colorScheme.secondaryContainer),
                        modifier = Modifier.testTag("main:topbar_search_notes_card"),
                    ) {
                        Box(
                            modifier = Modifier.padding(
                                horizontal = 64.dp,
                                vertical = 4.dp,
                            ),
...
                            )
                        }
                    }
                }
                else -> Text(
                    text = labelText,
                    modifier = Modifier.testTag("main:topbar_title"),
                )
            }
        },
        subtitle = {},
        actions = actions,
        colors = color,
...
